--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
+		"primeicons": "^5.0.0",
+		"primereact": "^7.1.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "5.0.0",
+		"react-transition-group": "^4.4.2",
 		"unsplash-js": "^7.0.15",
 		"web-vitals": "^2.1.2"
 	},
@@ -22,8 +25,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
